fix too small selectedplayer height

--- a/components/AddGameModal/Content/PlayerSelection/SelectedPlayer/SelectedPlayer.module.scss
+++ b/components/AddGameModal/Content/PlayerSelection/SelectedPlayer/SelectedPlayer.module.scss
@@ -13,7 +13,7 @@
 }
 
 .layout {
-  max-height: 40%;
+  max-height: 50%;
 }
 
 .head {
